--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       try {
         const res = await fetch('https://www.thesportsdb.com/api/v1/json/123/lookuptable.php?l=4397&s=2024-2025');
         const data = await res.json();
-        const table = data.table?.slice(0, 6) || [];
+        const table = (data.table || []).filter(team => team.strTeam).slice(0, 6);
         const tbody = document.querySelector("#leagueTable tbody");
 
         table.forEach(team => {
