--- a/index.html
+++ b/index.html
@@ -4,19 +4,46 @@
   <meta charset="UTF-8">
   <title>League One Top 6</title>
   <style>
-    body { background: #1e1e2f; color: #fff; font-family: sans-serif; padding: 10px; margin: 0; }
-    h2 { margin-top: 0; font-size: 20px; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 5px; text-align: left; }
-    th { background-color: #2c2c3c; }
-    tr:nth-child(even) { background-color: #2a2a2a; }
+    body {
+      background: #1e1e2f;
+      color: #fff;
+      font-family: sans-serif;
+      padding: 10px;
+      margin: 0;
+    }
+    h2 {
+      margin-top: 0;
+      font-size: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 5px;
+      text-align: left;
+    }
+    th {
+      background-color: #2c2c3c;
+    }
+    tr:nth-child(even) {
+      background-color: #2a2a2a;
+    }
+    tr:hover {
+      background-color: #333344;
+    }
+    img.team-badge {
+      height: 20px;
+      vertical-align: middle;
+      margin-right: 6px;
+    }
   </style>
 </head>
 <body>
   <h2>League One – Top 6</h2>
   <table id="leagueTable">
     <thead>
-      <tr><th>Pos</th><th>Team</th><th>Pts</th></tr>
+      <tr><th>Pos</th><th>Team</th><th>Pld</th><th>Pts</th></tr>
     </thead>
     <tbody></tbody>
   </table>
@@ -29,10 +56,14 @@
         const table = (data.table || []).filter(team => team.strTeam).slice(0, 6);
         const tbody = document.querySelector("#leagueTable tbody");
 
+        // Clear table first
+        tbody.innerHTML = "";
+
         table.forEach(team => {
           tbody.innerHTML += `<tr>
             <td>${team.intRank}</td>
-            <td>${team.strTeam}</td>
+            <td><img class="team-badge" src="${team.strTeamBadge}" alt="${team.strTeam} logo"> ${team.strTeam}</td>
+            <td>${team.intPlayed}</td>
             <td>${team.intPoints}</td>
           </tr>`;
         });
@@ -41,7 +72,9 @@
         console.error(err);
       }
     }
+
     getTable();
+    setInterval(getTable, 15 * 60 * 1000); // Auto-refresh every 15 minutes
   </script>
 </body>
 </html>
