--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <thead>
       <tr>
         <th>Team</th>
-        <th><img src="https://cdn-icons-png.flaticon.com/512/189/189665.png" alt="Matches Played" class="icon" title="Played" /></th>
-        <th><img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Points" class="icon" title="Points" /></th>
+        <th>
+          <img src="https://cdn-icons-png.flaticon.com/512/189/189665.png" alt="Matches Played" class="icon" title="Played" />
+        </th>
+        <th>
+          <img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Points" class="icon" title="Points" />
+        </th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -52,6 +56,7 @@
         tbody.innerHTML = '';
 
         standings.slice(0,6).forEach(team => {
+          console.log(`${team.team.name} played: ${team.all.played}`); // debug in console
           tbody.innerHTML += `
             <tr>
               <td><img src="${team.team.logo}" alt="${team.team.name} logo" />${team.team.name}</td>
