--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>League One Top 6</title>
+  #<title>League One Top 6</title>
   <style>
     body { background: #1e1e2f; color: #fff; font-family: sans-serif; padding: 10px; margin: 0; }
     h2 { margin-top: 0; font-size: 20px; }
