--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>League One Top 6</title>
+  <meta charset="UTF-8">
+  <title>League One Table</title>
   <style>
     body { background: #1e1e2f; color: #fff; font-family: sans-serif; padding: 10px; margin: 0; }
-    h2 { margin-top: 0; font-size: 20px; }
     table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 5px; text-align: left; vertical-align: middle; }
+    th, td { padding: 5px; text-align: left; }
     th { background-color: #2c2c3c; }
     tr:nth-child(even) { background-color: #2a2a2a; }
-    img { width: 24px; height: 24px; margin-right: 8px; vertical-align: middle; }
   </style>
 </head>
 <body>
-  
   <table id="leagueTable">
     <thead>
-      <tr>
-        <th>Team</th>
-        <th>Played</th>
-        <th>Points</th>
-      </tr>
+      <tr><th>Team</th><th>Played</th><th>Points</th></tr>
     </thead>
     <tbody></tbody>
   </table>
@@ -40,21 +33,27 @@
         if (!res.ok) throw new Error(`API error: ${res.status} ${res.statusText}`);
 
         const data = await res.json();
-        const standings = data.response[0].league.standings[0];
+        const league = data.response?.[0]?.league;
+
+        if (!league || !league.standings) {
+          throw new Error("⚠️ 'league' or 'standings' not found in response");
+        }
+
+        const standings = league.standings[0];
         const tbody = document.querySelector("#leagueTable tbody");
         tbody.innerHTML = '';
 
         standings.slice(0, 6).forEach(team => {
           tbody.innerHTML += `
             <tr>
-              <td><img src="${team.team.logo}" alt="${team.team.name} logo" />${team.team.name}</td>
+              <td>${team.team.name}</td>
               <td>${team.all.played}</td>
               <td>${team.points}</td>
             </tr>
           `;
         });
       } catch (err) {
-        document.querySelector("body").innerHTML += `<p>⚠️ Failed to load table: ${err.message}</p>`;
+        document.body.innerHTML += `<p>⚠️ Failed to load table: ${err.message}</p>`;
         console.error(err);
       }
     }
