--- a/index.html
+++ b/index.html
@@ -4,48 +4,11 @@
   <meta charset="UTF-8">
   <title>League One Table</title>
   <style>
-    :root {
-      --bg-color: #1e1e2f;
-      --text-color: #e5e5e5;
-      --alt-bg: #2a2a3d;
-      --header-bg: #2c2c3c;
-      --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background: var(--bg-color);
-      color: var(--text-color);
-      font-family: var(--font-family);
-      font-size: 14px;
-      margin: 0;
-      padding: 8px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    th, td {
-      padding: 6px 10px;
-      text-align: left;
-    }
-
-    th {
-      background-color: var(--header-bg);
-      color: #fff;
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 12px;
-    }
-
-    tr:nth-child(even) {
-      background-color: var(--alt-bg);
-    }
-
-    tr:hover {
-      background-color: #33334d;
-    }
+    body { background: #1e1e2f; color: #fff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 10px; margin: 0; }
+    table { width: 100%; border-collapse: collapse; }
+    th, td { padding: 5px; text-align: left; }
+    th { background-color: #2c2c3c; }
+    tr:nth-child(even) { background-color: #2a2a2a; }
   </style>
 </head>
 <body>
