--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>League One Table</title>
   <style>
-    body { background: #1e1e2f; color: #fff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 10px; margin: 0; }
+    body { background: #1e1e2f; color: #fff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 5px; padding: 10px; margin: 0; }
     table { width: 100%; border-collapse: collapse; }
     th, td { padding: 5px; text-align: left; }
     th { background-color: #2c2c3c; }
