--- a/index.html
+++ b/index.html
@@ -4,11 +4,60 @@
   <meta charset="UTF-8">
   <title>League One Table</title>
   <style>
-    body { background: #1e1e2f; color: #fff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 10px; margin: 0; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 5px; text-align: left; }
-    th { background-color: #2c2c3c; }
-    tr:nth-child(even) { background-color: #2a2a2a; }
+    :root {
+      --text-color: #e5e5e5;
+      --alt-bg: transparent;
+      --header-bg: transparent;
+      --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background: transparent;
+      color: var(--text-color);
+      font-family: var(--font-family);
+      font-size: 14px;
+      margin: 0;
+      padding: 8px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 6px 10px;
+      text-align: left;
+      vertical-align: middle;
+    }
+
+    th {
+      background-color: var(--header-bg);
+      color: var(--text-color);
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 12px;
+    }
+
+    tr:nth-child(even) {
+      background-color: var(--alt-bg);
+    }
+
+    tr:hover {
+      background-color: rgba(255, 255, 255, 0.05);
+    }
+
+    .team-cell {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .team-logo {
+      width: 20px;
+      height: 20px;
+      object-fit: contain;
+    }
   </style>
 </head>
 <body>
@@ -44,11 +93,21 @@
         tbody.innerHTML = '';
 
         standings.slice(0, 6).forEach(team => {
+          const logo = team.team.logo || '';
+          const name = team.team.name || '';
+          const played = team.all.played ?? '-';
+          const points = team.points ?? '-';
+
           tbody.innerHTML += `
             <tr>
-              <td>${team.team.name}</td>
-              <td>${team.all.played}</td>
-              <td>${team.points}</td>
+              <td>
+                <div class="team-cell">
+                  <img src="${logo}" alt="${name} Logo" class="team-logo">
+                  ${name}
+                </div>
+              </td>
+              <td>${played}</td>
+              <td>${points}</td>
             </tr>
           `;
         });
