--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background: transparent;
       color: var(--text-color);
       font-family: var(--font-family);
-      font-size: 14px;
+      font-size: 12px;
       margin: 0;
       padding: 8px;
     }
@@ -26,8 +26,7 @@
     }
 
     th, td {
-      padding: 6px 10px;
-      text-align: left;
+      padding: 6px 8px;
       vertical-align: middle;
     }
 
@@ -36,7 +35,14 @@
       color: var(--text-color);
       font-weight: 600;
       text-transform: uppercase;
-      font-size: 12px;
+      font-size: 10px;
+    }
+
+    td:nth-child(2),
+    td:nth-child(3),
+    th:nth-child(2),
+    th:nth-child(3) {
+      text-align: center;
     }
 
     tr:nth-child(even) {
@@ -50,12 +56,12 @@
     .team-cell {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 6px;
     }
 
     .team-logo {
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
       object-fit: contain;
     }
   </style>
