--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>League One Table</title>
   <style>
     :root {
@@ -30,19 +30,25 @@
       vertical-align: middle;
     }
 
+    th:first-child {
+      text-align: left;
+    }
+
+    th:nth-child(n+2) {
+      text-align: center;
+    }
+
+    td:nth-child(2),
+    td:nth-child(3) {
+      text-align: center;
+    }
+
     th {
       background-color: var(--header-bg);
       color: var(--text-color);
       font-weight: 600;
       text-transform: uppercase;
       font-size: 10px;
-    }
-
-    td:nth-child(2),
-    td:nth-child(3),
-    th:nth-child(2),
-    th:nth-child(3) {
-      text-align: center;
     }
 
     tr:nth-child(even) {
@@ -108,7 +114,7 @@
             <tr>
               <td>
                 <div class="team-cell">
-                  <img src="${logo}" alt="${name} Logo" class="team-logo">
+                  <img src="${logo}" alt="${name} Logo" class="team-logo" />
                   ${name}
                 </div>
               </td>
