--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     }
 
     th, td {
-      padding: 4px 6px;      /* tighter padding for less height */
+      padding: 4px 6px;
       vertical-align: middle;
-      white-space: nowrap;   /* prevent wrapping for neatness */
+      white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
 
-    th:nth-child(2) {
+    th:nth-child(1), td:nth-child(1) {
       text-align: left;
     }
 
-    th:nth-child(3), th:nth-child(4),
-    td:nth-child(3), td:nth-child(4) {
+    th:nth-child(2), th:nth-child(3),
+    td:nth-child(2), td:nth-child(3) {
       text-align: center;
     }
 
