--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       background: transparent;
       color: var(--text-color);
       font-family: var(--font-family);
-      font-size: 12px;
+      font-size: 11px;
       margin: 0;
-      padding: 8px;
+      padding: 4px;
     }
 
     table {
@@ -27,11 +27,12 @@
     }
 
     th, td {
-      padding: 4px 6px;
+      padding: 2px 4px;
       vertical-align: middle;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      line-height: 1.2;
     }
 
     th:nth-child(1), td:nth-child(1) {
