--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
-  <title>League One Table</title>
+  <title>Cardiff City Standings</title>
   <style>
     :root {
       --text-color: #e5e5e5;
@@ -61,18 +61,10 @@
     tr:hover {
       background-color: rgba(255, 255, 255, 0.05);
     }
-
-    .message {
-      text-align: center;
-      padding: 10px;
-      font-size: 0.8rem;
-      opacity: 0.8;
-    }
   </style>
 </head>
 <body>
-  <div id="message" class="message" style="display: none;"></div>
-  <table id="leagueTable" style="display: none;">
+  <table id="leagueTable">
     <thead>
       <tr>
         <th>Team</th>
@@ -87,28 +79,21 @@
     async function getTable() {
       try {
         const res = await fetch('./data/standings.json');
-        if (!res.ok) throw new Error(`API error: ${res.status} ${res.statusText}`);
+        if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
 
         const data = await res.json();
         const league = data.response?.[0]?.league;
 
         if (!league || !league.standings) {
-          throw new Error("⚠️ 'league' or 'standings' not found in response");
-        }
-
-        const standings = league.standings[0];
-
-        const tbody = document.querySelector("#leagueTable tbody");
-        const table = document.getElementById("leagueTable");
-        const message = document.getElementById("message");
-
-        if (!standings || standings.length === 0) {
-          message.style.display = "block";
-          message.textContent = "🏖️ Summer break. See you next season!";
+          // Off-season or no standings? Show message instead of table.
+          document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
           return;
         }
 
+        const standings = league.standings[0];
+        const tbody = document.querySelector("#leagueTable tbody");
         tbody.innerHTML = '';
+
         standings.forEach(team => {
           const name = team.team.name || '';
           const played = team.all.played ?? '-';
@@ -122,10 +107,8 @@
             </tr>
           `;
         });
-
-        table.style.display = "table";
       } catch (err) {
-        document.body.innerHTML += `<p>⚠️ Failed to load table: ${err.message}</p>`;
+        document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
         console.error(err);
       }
     }
