--- a/index.html
+++ b/index.html
@@ -4,81 +4,72 @@
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
   <title>Cardiff City Standings</title>
-  <style>
-    :root {
-      --text-color: #e5e5e5;
-      --alt-bg: transparent;
-      --header-bg: transparent;
-      --font-family: 'Manrope', 'Manrope-Fallback', Arial, sans-serif;
-    }
+<style>
+  :root {
+    --text-color: #e5e5e5;
+    --alt-bg: transparent;
+    --header-bg: transparent;
+    --font-family: 'Manrope', 'Manrope-Fallback', Arial, sans-serif;
+  }
 
-    body {
-      background: transparent;
-      color: var(--text-color);
-      font-family: var(--font-family);
-      font-size: 0.75rem;
-      margin: 0;
-      padding: 4px;
-    }
+  body {
+    background: transparent;
+    color: var(--text-color);
+    font-family: var(--font-family);
+    font-size: 0.75rem;
+    margin: 0;
+    padding: 4px;
+    overflow-y: scroll; /* allow scroll */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE */
+  }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      table-layout: fixed;
-      margin-top: 2px;
-    }
+  /* WebKit scrollbar hide */
+  body::-webkit-scrollbar {
+    display: none;
+  }
 
-    th, td {
-      padding: 2px 4px;
-      vertical-align: middle;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      line-height: 1.2;
-    }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    margin-top: 2px;
+  }
 
-    th:nth-child(1), td:nth-child(1) {
-      text-align: left;
-    }
+  th, td {
+    padding: 2px 4px;
+    vertical-align: middle;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.2;
+  }
 
-    th:nth-child(2), th:nth-child(3),
-    td:nth-child(2), td:nth-child(3) {
-      text-align: center;
-    }
+  th:nth-child(1), td:nth-child(1) {
+    text-align: left;
+  }
 
-    th {
-      background-color: var(--header-bg);
-      color: var(--text-color);
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 10px;
-    }
+  th:nth-child(2), th:nth-child(3),
+  td:nth-child(2), td:nth-child(3) {
+    text-align: center;
+  }
 
-    tr:nth-child(even) {
-      background-color: var(--alt-bg);
-    }
+  th {
+    background-color: var(--header-bg);
+    color: var(--text-color);
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 10px;
+  }
 
-    tr:hover {
-      background-color: rgba(255, 255, 255, 0.05);
-    }
-    /* Hide scrollbar but keep scroll functionality - works for most browsers */
+  tr:nth-child(even) {
+    background-color: var(--alt-bg);
+  }
 
-    /* For Firefox */
-    body {
-      scrollbar-width: none; /* hides scrollbar */
-      -ms-overflow-style: none; /* IE 10+ */
-    }
-
-    /* For WebKit browsers (Chrome, Safari, Edge) */
-    body::-webkit-scrollbar {
-      display: none;
-    }
-
-    /* Make sure body is scrollable */
-    body {
-      overflow-y: scroll; /* or auto */
-    }
-  </style>
+  tr:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
+</style>
 </head>
 <body>
   <table id="leagueTable">
