--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     --header-bg: transparent;
     --font-family: 'Manrope', 'Manrope-Fallback', Arial, sans-serif;
   }
+  
+  .cardiff {
+    color: #3A9BDC; /* or whatever shade of blue you fancy */
+    font-weight: 700;
+    background-color: rgba(58, 155, 220, 0.1); /* light blue tint */
+  }
 
   body {
     background: transparent;
