--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
     /* Cardiff Highlight */
     .cardiff-highlight {
-      background-color: #002B5C !important; /* Cardiff Blue */
-      color: #ffffff;
+      #background-color: #002B5C !important; /* Cardiff Blue */
+      color: #2b7fff !important;
       font-weight: bold;
     }
   </style>
