--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
 
     body {
       background: transparent;
-      color: var(--text-color);
       font-family: var(--font-family);
       font-size: 0.75rem;
       margin: 0;
-      padding: 4px;
-      overflow-y: scroll;
-      scrollbar-width: none; /* Firefox */
-      -ms-overflow-style: none; /* IE */
+      padding: 0;
+      overflow: hidden;
+      height: 100vh;
     }
 
-    body::-webkit-scrollbar {
-      display: none; /* Chrome, Safari */
+    .scroll-container {
+      height: 100%;
+      padding: 4px;
+      overflow-y: auto;
+
+      /* Hide scrollbar cross-browser */
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE 10+ */
+    }
+    .scroll-container::-webkit-scrollbar {
+      display: none; /* Chrome/Safari */
     }
 
     table {
@@ -78,60 +85,62 @@
   </style>
 </head>
 <body>
-  <table id="leagueTable">
-    <thead>
-      <tr>
-        <th>Team</th>
-        <th>Played</th>
-        <th>Points</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="scroll-container">
+    <table id="leagueTable">
+      <thead>
+        <tr>
+          <th>Team</th>
+          <th>Played</th>
+          <th>Points</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
-  <script>
-    async function getTable() {
-      try {
-        const res = await fetch('./data/standings.json');
-        if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
+    <script>
+      async function getTable() {
+        try {
+          const res = await fetch('./data/standings.json');
+          if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
 
-        const data = await res.json();
-        const league = data.response?.[0]?.league;
+          const data = await res.json();
+          const league = data.response?.[0]?.league;
 
-        if (!league || !league.standings) {
-          document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
-          return;
-        }
-
-        const standings = league.standings[0];
-        const tbody = document.querySelector("#leagueTable tbody");
-        tbody.innerHTML = '';
-
-        standings.forEach(team => {
-          const name = team.team.name || '';
-          const played = team.all.played ?? '-';
-          const points = team.points ?? '-';
-          const highlight = team.highlight ?? false;
-
-          const row = document.createElement('tr');
-          if (highlight) {
-            row.classList.add('cardiff-highlight');
+          if (!league || !league.standings) {
+            document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
+            return;
           }
 
-          row.innerHTML = `
-            <td>${name}</td>
-            <td>${played}</td>
-            <td>${points}</td>
-          `;
-          tbody.appendChild(row);
-        });
-      } catch (err) {
-        document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
-        console.error(err);
-      }
-    }
+          const standings = league.standings[0];
+          const tbody = document.querySelector("#leagueTable tbody");
+          tbody.innerHTML = '';
 
-    getTable();
-  </script>
+          standings.forEach(team => {
+            const name = team.team.name || '';
+            const played = team.all.played ?? '-';
+            const points = team.points ?? '-';
+            const highlight = team.highlight ?? false;
+
+            const row = document.createElement('tr');
+            if (highlight) {
+              row.classList.add('cardiff-highlight');
+            }
+
+            row.innerHTML = `
+              <td>${name}</td>
+              <td>${played}</td>
+              <td>${points}</td>
+            `;
+            tbody.appendChild(row);
+          });
+        } catch (err) {
+          document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
+          console.error(err);
+        }
+      }
+
+      getTable();
+    </script>
+  </div>
 </body>
 </html>
