--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
       padding: 4px;
       overflow-y: auto;
 
-      /* Hide scrollbar cross-browser */
+      color: var(--text-color);
+      font-family: var(--font-family);
+
       scrollbar-width: none; /* Firefox */
       -ms-overflow-style: none; /* IE 10+ */
     }
+
     .scroll-container::-webkit-scrollbar {
       display: none; /* Chrome/Safari */
     }
