--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       border-collapse: collapse;
       table-layout: fixed;
       margin-top: 2px;
+      margin-bottom: 2px;
     }
 
     th, td {
