--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cardiff City Standings</title>
   <style>
     :root {
-      --text-color: #e5e5e5;
+      --text-color: #E2E8F0;
       --alt-bg: transparent;
       --header-bg: transparent;
       --font-family: 'Manrope', 'Manrope-Fallback', Arial, sans-serif;
