--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Only the JS at the bottom is different from previous version -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,16 +27,14 @@
       height: 100%;
       padding: 4px;
       overflow-y: auto;
-
       color: var(--text-color);
       font-family: var(--font-family);
-
-      scrollbar-width: none; /* Firefox */
-      -ms-overflow-style: none; /* IE 10+ */
+      scrollbar-width: none;
+      -ms-overflow-style: none;
     }
 
     .scroll-container::-webkit-scrollbar {
-      display: none; /* Chrome/Safari */
+      display: none;
     }
 
     table {
@@ -80,11 +79,31 @@
       background-color: rgba(255, 255, 255, 0.05);
     }
 
-    /* Cardiff Highlight */
     .cardiff-highlight {
-      #background-color: #002B5C !important; /* Cardiff Blue */
       color: #2b7fff !important;
       font-weight: bold;
+    }
+
+    #team-popup {
+      position: absolute;
+      background-color: #1e293b;
+      color: white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+      border-radius: 0.75rem;
+      padding: 0.75rem;
+      border: 1px solid #334155;
+      z-index: 9999;
+      text-align: center;
+      font-size: 0.75rem;
+      width: 180px;
+      display: none;
+    }
+
+    #team-popup img {
+      width: 40px;
+      height: 40px;
+      border-radius: 9999px;
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
@@ -100,51 +119,90 @@
       </thead>
       <tbody></tbody>
     </table>
-
-    <script>
-      async function getTable() {
-        try {
-          const res = await fetch('./data/standings.json');
-          if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
-
-          const data = await res.json();
-          const league = data.response?.[0]?.league;
-
-          if (!league || !league.standings) {
-            document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
-            return;
-          }
-
-          const standings = league.standings[0];
-          const tbody = document.querySelector("#leagueTable tbody");
-          tbody.innerHTML = '';
-
-          standings.forEach(team => {
-            const name = team.team.name || '';
-            const played = team.all.played ?? '-';
-            const points = team.points ?? '-';
-            const highlight = team.highlight ?? false;
-
-            const row = document.createElement('tr');
-            if (highlight) {
-              row.classList.add('cardiff-highlight');
-            }
-
-            row.innerHTML = `
-              <td>${name}</td>
-              <td>${played}</td>
-              <td>${points}</td>
-            `;
-            tbody.appendChild(row);
-          });
-        } catch (err) {
-          document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
-          console.error(err);
-        }
-      }
-
-      getTable();
-    </script>
   </div>
+
+  <!-- Popup Info -->
+  <div id="team-popup">
+    <img id="popup-badge" src="" alt="Team badge" />
+    <div id="popup-name" class="font-bold mb-1"></div>
+    <div id="popup-position" class="text-slate-300 text-sm"></div>
+  </div>
+
+  <script>
+    async function getTable() {
+      try {
+        const res = await fetch('./data/standings.json');
+        if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
+
+        const data = await res.json();
+        const league = data.response?.[0]?.league;
+
+        if (!league || !league.standings) {
+          document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
+          return;
+        }
+
+        const standings = league.standings[0];
+        const tbody = document.querySelector("#leagueTable tbody");
+        tbody.innerHTML = '';
+
+        standings.forEach(team => {
+          const name = team.team.name || '';
+          const played = team.all.played ?? '-';
+          const points = team.points ?? '-';
+          const highlight = team.highlight ?? false;
+
+          const row = document.createElement('tr');
+          if (highlight) row.classList.add('cardiff-highlight');
+
+          row.setAttribute('data-name', name);
+          row.setAttribute('data-position', team.rank);
+          row.setAttribute('data-badge', team.team.logo);
+          row.classList.add('team-row');
+
+          row.innerHTML = `
+            <td>${name}</td>
+            <td>${played}</td>
+            <td>${points}</td>
+          `;
+          tbody.appendChild(row);
+        });
+      } catch (err) {
+        document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
+        console.error(err);
+      }
+    }
+
+    getTable();
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const popup = document.getElementById('team-popup');
+      const badge = document.getElementById('popup-badge');
+      const name = document.getElementById('popup-name');
+      const position = document.getElementById('popup-position');
+
+      document.addEventListener('click', e => {
+        const row = e.target.closest('.team-row');
+
+        // If clicking outside the popup or row, hide it
+        if (!row) {
+          popup.style.display = 'none';
+          return;
+        }
+
+        // Set popup content
+        badge.src = row.dataset.badge;
+        name.textContent = row.dataset.name;
+        position.textContent = `Position: ${row.dataset.position}`;
+
+        // Position the popup
+        const rect = row.getBoundingClientRect();
+        popup.style.left = `${rect.left + window.scrollX + row.offsetWidth}px`;
+        popup.style.top = `${rect.top + window.scrollY}px`;
+
+        popup.style.display = 'block';
+      });
+    });
+  </script>
 </body>
 </html>
